# sleeplab

./: .env.example  .gitignore  .releaserc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  NOTICE.md  README.md  VERSION  compose.advanced.yaml  compose.override.yaml  compose.yaml  docker-compose.yml  llms.txt  mkdocs.yml  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql  server.py  snapshots.yml
.claude/: settings.json
.github/: dependabot.yml
api/: adherence.py  auth.py  compliance.py  database.py  import_runs.py  leak_units.py  llm_client.py  main.py  mcp_server_http.py  models.py  oximeter.py  project.json  requirements-mcp.txt  requirements.txt  settings_store.py  therapy_score.py
docker/: entrypoint.sh  wait_for_db.py
docs/: compliance-thresholds.md  contributing.md  cpap-autosync-integration.md  cpap-uploader-integration.md  index.md  oscar_import_gap_analysis.md  sleephq-integration.md  sleeplab_2_alpha_6_checklist.md  sleeplab_2_alpha_7_checklist.md  sleeplab_2_beta_readiness_plan.md  sleeplab_2_crimson_structure_review.md  sleeplab_2_data_architecture.md  sleeplab_2_device_time_correction_design.md  sleeplab_2_fixture_validation_matrix.md  sleeplab_2_import_level_conformance_plan.md  sleeplab_2_loader_and_conformance_plan.md  sleeplab_2_nightly_session_workflow.md  sleeplab_2_release_roadmap.md  sleeplab_2_resmed_cutover_readiness_audit.md  sleeplab_2_resmed_cutover_remaining_work.md  sleeplab_2_resmed_normalized_output_gap_audit.md  sleeplab_2_validation_inputs.md  testing.md  ui-overview.md  user-guide.md
frontend/: package-lock.json  package.json  project.json  tsconfig.app.json  tsconfig.storybook.json  typedoc.json  vitest.storybook.ts  vitest.workspace.js
importer/: conformance.py  db.py  edf_parser.py  import_sessions.py  inspect_sleephq_fields.py  resmed_str.py  sleephq_import.py  test_sleephq_fetch.py  waveform_chunks.py  waveform_estimate.py
migrations/: 004_reset_uuid_ids.sql  007_add_user_equipment.sql  007_nullable_arousal_count.sql  008_add_user_equipment.sql  008_add_wearable_settings.sql  009_add_session_equipment_fields.sql  010_update_equipment_types.sql  011_add_local_datalog_path.sql  012_add_wearable_settings.sql  013_add_session_waveform.sql  014_add_event_inspector_indexes.sql  015_add_internal_app_settings.sql  015_add_machine_setting_history_fields.sql  016_add_session_machine_tz.sql  017_add_ai_analysis_cache.sql  018_add_compliance_settings.sql  018_add_session_note.sql  019_add_session_tags.sql  020_dedupe_session_events.sql  021_add_session_manufacturer.sql  022_add_session_leak_semantics.sql  023_add_cpap_data_foundation.sql  024_add_authoritative_therapy_semantics.sql  025_prefer_authoritative_therapy_usage.sql  (+4 more)
(+318 files in other folders)
