[project]
name = "sleeplab"
version = "1.2.1"
description = "Sleep therapy data analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "PyJWT==2.13.0",
    "passlib==1.7.4",
    "openai==2.41.0",
    "python-multipart==0.0.29",
    "httpx>=0.27.0",
    "matplotlib==3.10.8",
    "reportlab==4.4.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: tests that require a Postgres database",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
