[project]
name = "sleeplab"
version = "2.0.0a13"
description = "Sleep therapy data analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "PyJWT==2.13.0",
    "passlib==1.7.4",
    "openai==2.41.0",
    "python-multipart==0.0.30",
    "httpx>=0.27.0",
    "matplotlib==3.10.9",
    "reportlab==4.5.1",
    "tzdata>=2025.2; sys_platform == 'win32'",
]

[project.optional-dependencies]
parser = [
    "cpap-parser[resmed] @ git+https://github.com/kilo-WATT/cpap-parser.git@6e015c4c95317683f68027099d7e998e36131eb2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: tests that require a Postgres database",
    "private_card: tests that require a private local CPAP card path",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
